# ComfyUI-drag-ghost

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
web/: Comfyui-node-ghost.js
